Fixed logos resizing on small screens

--- a/_includes/css/my.css
+++ b/_includes/css/my.css
@@ -339,6 +339,13 @@ section h3.section-subheading {
   }
 }
 
+@media(max-width:992px){
+  .tools {
+    visibility: hidden;
+    height: 1px;
+  }
+}
+
 .skill-heading {
   margin: 15px 0;
   text-transform: none;
